--- a/src/postovie.html
+++ b/src/postovie.html
@@ -257,7 +257,7 @@
                             Велика платформа для чашок з електропідігрівом. <br>
                             Ручний капучинатор для збивання пишної молочної пінки. <br>
                             Наявність датчика рівня води і тиску. <br>
-                            Кавомолки можна подивитися тут</p>
+                            Кавомолки можна подивитися <a href="./kofemolki.html">тут</a>.</p>
                         <ul>
                             <li><b>Габарити (ШхВхГ): </b>310 мм х 635 мм х 475 мм</li>
                             <li><b>Потужність: </b>1,8 кВт</li>
