--- a/src/ru/chay_stakany_ru.html
+++ b/src/ru/chay_stakany_ru.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Золоті стакани компанії Bianchi Professional впізнавані споживачем у багатьох містах України 
-    | Стакани виробляються з міцного якісного картону із застосуванням зовнішньої ламінації |
-   В асортименті представлені різні об'єми.">
-    <meta name="keywords" content="bianchi, кава, стакани для кави, стакани для чаю">
+    <meta name="description" content="Золотые стаканы компании Bianchi Professional узнаваемы потребителем во многих городах Украины.
+    | Стаканы производятся из прочного качественного картона с применением наружной ламинации
+   В ассортименте представлены разные объемы.">
+    <meta name="keywords" content="bianchi, кофе, стаканы для кофе, стаканы для чая">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Стакани для кави і чаю | Стакани для вендінга та ХоРеКа</title>
+    <title>Стаканы для кофе та чаю | Стаканы для вендинга и ХоРеКи</title>
     <link rel="icon" href="./favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -208,7 +208,7 @@
         </div>
     </nav>
     <div class="separator">
-        <h3>Стакани, цукор</h3>
+        <h3>Стаканы, сахар</h3>
     </div>
     <!-- /////////////////////////////////////////   Goods    ////////////////////////////////////////     -->
     <div class="container hr-line"></div>
@@ -220,19 +220,19 @@
                         <img src="../img/chay_sahar/assorti.webp" class="card-img-top combo" alt="Tea">
                         <figcaption class="goods">
                             <ul class="lh-sm">
-                                <li><b>Великий<br>асотртимент<br>смаків</b></li>
+                                <li><b>Большой<br>ассотртимент<br>вкусов</b></li>
                                 <br>
-                                <li><b>Об'єм стакану:<br></b>250 мл</li>
+                                <li><b>Объём стакана:<br></b>250 мл</li>
                                 
                                 <!-- <li><b>Фасовка:<br></b>пакет (25х2 г),<br>лист (250 г) </li> -->
                             </ul>
                         </figcaption>
                     </figure>
                     <div class="card-body">
-                        <h3 class="text-center">Чай Bianchi в асортименті та картонний фірмовий стакан</h3>
+                        <h3 class="text-center">Чай Bianchi в ассортименте и картонный фирменный стакан</h3>
                         <small>
-                            <p class="lh-sm">Чай у пакетиках в індивідуальному конвертику.</p>
-                                <p class="lh-sm">Колекція смаків задовольнить будь якого вибагливого поцінувача чаю!</p>
+                            <p class="lh-sm">Чай в пакетиках в индивидуальном конвертике.</p>
+                                <p class="lh-sm">Коллекция вкусов удовлетворит любой, даже самый взыскательный вкус!</p>
                         </small>
                     </div>
                 </div>
@@ -243,22 +243,22 @@
                         <img src="../img/chay_sahar/stakan.webp" class="card-img-top combo" alt="Cup">
                         <figcaption class="goods">
                             <ul class="lh-sm">
-                                <li><b>Об'єм:<br></b>100-300 мл</li>
+                                <li><b>Объєм:<br></b>100-300 мл</li>
                                 <br>
-                                <li><b>Ламінування:<br></b>одностороннє<br>(зовнішнє)</li>
+                                <li><b>Ламинирование:<br></b>одностороннее<br>(внешнее)</li>
                                 <br>
                                 <li><b>Макс.<br>температура:<br></b>до 90°С</li>
                             </ul>
                         </figcaption>
                     </figure>
                     <div class="card-body">
-                        <h3 class="text-center">Картонні стакани</h3>
+                        <h3 class="text-center">Картонные стаканы</h3>
                         <small>
-                            <p class="lh-sm">Золоті стакани компанії Bianchi Professional впізнавані споживачем у
-                                багатьох містах України.</p>
-                            <p class="lh-sm">Стакани виробляються з міцного якісного картону із застосуванням зовнішньої
-                                ламінації.</p>
-                            <p class="lh-sm">В асортименті представлені різні об'єми.</p>
+                            <p class="lh-sm">Золотые стаканы компании Bianchi Professional узнаваемы потребителем в
+                                многих городах Украины.</p>
+                            <p class="lh-sm">Стаканы изготавливаются из прочного качественного картона с применением наружной.
+                                ламинации.</p>
+                            <p class="lh-sm">В ассортименте представлены разные объемы.</p>
                         </small>
                     </div>
                 </div>
@@ -269,16 +269,16 @@
                         <img src="../img/chay_sahar/sugar.webp" class="card-img-top combo" alt="Sugar">
                         <figcaption class="goods">
                             <ul class="lh-sm">
-                                <li><b>Розмір стіка:<br></b>66х50 мм</li>
+                                <li><b>Размер стика:<br></b>66х50 мм</li>
                                 <br>
-                                <li><b>Вага:<br></b>4 г</li>
+                                <li><b>Вес:<br></b>4 г</li>
                                 <br>
-                                <li><b>Допустиме <br> відхилення: <br> маси нетто:<br></b>мінус 9%</li>
+                                <li><b>Допустимое <br> отклонение: <br> массы нетто:<br></b>минус 9%</li>
                             </ul>
                         </figcaption>
                     </figure>
                     <div class="card-body">
-                        <h3 class="text-center">Цукор білий <br> порційний в стіках</h3>
+                        <h3 class="text-center">Сахар белый <br> порционный в стиках</h3>
                     </div>
                 </div>
             </div>
