--- a/src/ru/contacty_ru.html
+++ b/src/ru/contacty_ru.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Ви можете зв'язатися з нами по e-mail, телефону або через форму зворотнього зв'язку">
+        content="Вы можете связаться с нами по e-mail, телефону или через форму обратной связи">
     <meta name="keywords"
-        content="кава, кавомашина в оренду, оренда, оренда кавоварки, прокат, кавомашина в прокат, кавовий бізнес, кавоварка">
+        content="кофе, кофемашина в аренду, аренда, аренда кофеварки, прокат, кофемашина в прокат, кофеварка, кофеварка">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Зв'язатися з нами | Bianchi Professional</title>
+    <title>Связаться с нами | Bianchi Professional</title>
     <link rel="icon" href="../favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -210,15 +210,15 @@
     </nav>
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
     <div class="separator">
-        <h3>Контактна інформація</h3>
+        <h3>Контактная информация</h3>
     </div>
     <!-- /////////////////////////////////////////   Body    ////////////////////////////////////////     -->
     <div class="container">
         <div class="description container contacts fill">
             <div class="row">
                 <div class="col p-5 m-3">
-                    <h4 class="text-center fw-bold">Ми працюємо! <br> <br> Але ситуація змінюється кожну хвилину. Тому
-                        уточнюйте інформацію за номерами телефонів вашого регіону, які вказані нижче.</h4>
+                    <h4 class="text-center fw-bold">Мы работаем! <br> <br> Но ситуация меняется каждую минуту. Поэтому
+                        уточняйте информацию по телефонам вашего региона, которые указаны ниже.</h4>
                 </div>
             </div>
         </div>
@@ -226,7 +226,7 @@
             <div class="col p-5 m-3 mb-5 contacts fill">
                 <h5 class="text-center green"><b>ХОРЕКА</b></h5>
                 <div class="container hr-line-contacts"></div>
-                <h6><b>ХАРКІВ</b></h6>
+                <h6><b>ХАРКОВ</b></h6>
                 <ul>
                     <li class="text-nowrap tel">
                         <i class="bi bi-telephone-fill green"></i>
@@ -238,7 +238,7 @@
                     </li>
                 </ul>
                 <div class="container hr-line-contacts"></div>
-                <h6><b>КИЇВ</b></h6>
+                <h6><b>КИЕВ</b></h6>
                 <ul>
                     <li class="text-nowrap tel">
                         <i class="bi bi-telephone-fill green"></i>
@@ -246,7 +246,7 @@
                     </li>
                 </ul>
                 <div class="container hr-line-contacts"></div>
-                <h6><b>БРОВАРИ, БОРИСПІЛЬ</b></h6>
+                <h6><b>БРОВАРЫ, БОРИСПОЛЬ</b></h6>
                 <ul>
                     <li class="text-nowrap tel">
                         <i class="bi bi-telephone-fill green"></i>
@@ -254,7 +254,7 @@
                     </li>
                 </ul>
                 <div class="container hr-line-contacts"></div>
-                <h6><b>БІЛА ЦЕРКВА, УМАНЬ</b></h6>
+                <h6><b>БЕЛАЯ ЦЕРКОВЬ, УМАНЬ</b></h6>
                 <ul>
                     <li class="text-nowrap tel">
                         <i class="bi bi-telephone-fill green"></i>
@@ -262,7 +262,7 @@
                     </li>
                 </ul>
                 <div class="container hr-line-contacts"></div>
-                <h6><b>ЧЕРКАСИ</b></h6>
+                <h6><b>ЧЕРКАССЫ</b></h6>
                 <ul>
                     <li class="text-nowrap tel">
                         <i class="bi bi-telephone-fill green"></i>
@@ -271,12 +271,12 @@
                 </ul>
             </div>
             <div class="col p-5 m-3 mb-5 contacts fill">
-                <h5 class="text-center green"><b>ВЕНДІНГ</b></h5>
+                <h5 class="text-center green"><b>ВЕНДИНГ</b></h5>
                 <div class="container hr-line-contacts"></div>
-                <h6>Встановлення вендінгового обладнання по містах:
-                    Харків, Київ, Полтава, Дніпро, Запоріжжя, Рівне, Львів,
-                    Івано-Франківськ, Чернівці, Вінниця, Житомир, Одеса,
-                    Кривий Ріг, Чернігів, Калуш, Коломия, Стрий.</h6>
+                <h6>Установка вендингового оборудования по городам:
+                    Харьков, Киев, Полтава, Днепр, Запорожье, Ровно, Львов,
+                    Ивано-Франковск, Черновцы, Винница, Житомир, Одесса,
+                    Кривой Рог, Чернигов, Калуш, Коломыя, Стрый.</h6>
                 <div class="container hr-line-contacts"></div>
                 <ul>
                     <li class="text-nowrap tel">
