--- a/src/ru/dlya_cafe_restoranov_ru.html
+++ b/src/ru/dlya_cafe_restoranov_ru.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="✔Професійна кавомашина постова для кафе та ресторанів в аренду ✔Безкоштовна доставка та обслуговування ✔Навчання вашого персоналу">
+        content="✔Профессиональная кофемашина постовая для кафе и ресторанов в аренду ✔Бесплатная доставка и обслуживание ✔Обучение вашего персонала">
     <meta name="keywords"
-        content="хорека, обладнання, кава,  кавове обладнання,  кавомашина в офіс, кавомашина в кафе, кавомашина в ресторан, професійне кавове обладнання">
+        content="хорека, оборудование, кофе, кофемашина, кофемашина в офис, кофемашина в кафе, кофемашина в ресторан, профессиональное кофейное оборудование">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Оренда професійнї кавомашини | Біанчі Харків</title>
+    <title>Аренда профессиональной кофемашины | Бианчи Харьков</title>
     <link rel="icon" href="../favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -211,7 +211,7 @@
         </div>
     </nav>
     <div class="separator">
-        <h3>Для кафе, ресторанів, офісів</h3>
+        <h3>Для кафе, ресторанов, офисов</h3>
     </div>
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
     <div class="banner">
@@ -227,11 +227,11 @@
                     <div class="card text-center">
                         <img src="../img/dlya_magazinov_i_setey/icon.webp" class="card-img-top" alt="icon">
                         <div class="card-body">
-                            <h5 class="fw-bold">Обладнання в аренду</h5>
-                            <p class="card-text main-text-size">Ми надаємо в оренду широкий вибір кавового обладнання.
-                                Як <a href="./avtomaty_ru.html">Суперавтомати</a> з сенсорним екраном, так і <a
-                                    href="./postovie_ru.html">Класичні</a> постові кавомашини у парі з
-                                професійною <a href="./kofemolki_ru.html">Кавомолкою</a>.</p>
+                            <h5 class="fw-bold">Оборудование в аренду</h5>
+                            <p class="card-text main-text-size">Мы предоставляем в аренду широкий выбор кофейного оборудования.
+                                Як <a href="./avtomaty_ru.html">Суперавтоматы</a> с сенсорным экраном, так и <a
+                                    href="./postovie_ru.html">Классические</a> постовые кофемашины в паре с
+                                профессиональной <a href="./kofemolki_ru.html">Кофемолкой</a>.</p>
                         </div>
                     </div>
                 </div>
@@ -239,10 +239,10 @@
                     <div class="card text-center">
                         <img src="../img/dlya_magazinov_i_setey/icon.webp" class="card-img-top" alt="icon">
                         <div class="card-body">
-                            <h5 class="fw-bold">Широкий асортимент <br> продуктів</h5>
-                            <p class="card-text main-text-size">Ми пропонуємо вам не тільки якісну каву і складові, а й
-                                супутні товари:
-                                сиропи, стакани, цукор, мішалки, а також великий вибір барної атрибутики.</p>
+                            <h5 class="fw-bold">Широкий ассортимент <br> продуков</h5>
+                            <p class="card-text main-text-size">Мы предлагаем вам не только качественный кофе и составляющие, но и
+                                сопутствующие товары:
+                                сиропы, стаканы, сахар, мешалки, а также большой выбор барной атрибутики.</p>
                         </div>
                     </div>
                 </div>
@@ -250,10 +250,10 @@
                     <div class="card text-center">
                         <img src="../img/dlya_magazinov_i_setey/icon.webp" class="card-img-top" alt="icon">
                         <div class="card-body">
-                            <h5 class="fw-bold">Супровід та обслуговування</h5>
-                            <p class="card-text main-text-size">Візит шеф-бариста раз на тиждень, протягом якого
-                                перевіряється якість приготування еспресо, налаштування кавомолок та загальний технічний
-                                стан. А також своєчасна доставка продукції.</p>
+                            <h5 class="fw-bold">Сопровождение и обслуживание</h5>
+                            <p class="card-text main-text-size">Визит шеф-бариста раз в неделю, в течение которого
+                                проверяется качество приготовления эспрессо, настройка кофемолок и общее техническое
+                                состояние. А также своевременная доставка продукции.</p>
                         </div>
                     </div>
                 </div>
@@ -268,12 +268,12 @@
                 <img src="../img/dlya_cafe_restoranov/cava.webp" class="p-3 img-fluid" alt="magazin">
             </div>
             <div class="col-lg-6">
-                <p class="p-4 magazine indent main-text-size">Мало хто хоче брати кота в мішку. Особливо, коли це
-                    стосується не однієї чашки
-                    кави на сніданок, а цілого сегменту у вашому закладі.
-                    Розуміючи цей момент, ми завжди проводимо презентацію послуг та товарів у нашому шоурумі.
-                    Майбутні партнери мають змогу спробувати різні купажі кави, подивитись ближче на обладнання та
-                    поспілкуватись із спеціалістами, що супроводжуватимуть протягом усього періоду співпраці.</p>
+                <p class="p-4 magazine indent main-text-size">Мало кто хочет брать кота в мешке. Особенно, когда это
+                    касается не одной чашки
+                    кофе на завтрак, а целого сегмента в вашем заведении.
+                    Понимая это, мы всегда проводим презентацию услуг и товаров в нашем шоуруме.
+                    Будущие партнеры могут попробовать разные купажи кофе, посмотреть поближе на оборудование и
+                    пообщаться со специалистами, сопровождающими в течение всего периода сотрудничества.</p>
             </div>
         </div>
     </div>
@@ -281,18 +281,18 @@
         <div class="row">
             <div class="col-lg-6">
                 <div class="p-4">
-                    <h5 class="green text-center">Переваги співпраці з нами</h5>
+                    <h5 class="green text-center">Преимущества сотрудничества с нами</h5>
                     <ul class="main-text-size">
-                        <li>Ми надаємо в оренду обладнання італійського виробника.</li>
-                        <li>Фахівці компанії регулярно відвідують наших клієнтів, пропонуючи повний спектр сервісного
-                            обслуговування, від дрібного планового ремонту на місці, до капітального ремонту на
-                            території
-                            нашої майстерні.</li>
-                        <li>Регулярне навчання вашого персоналу, проведення тренінгів, семінарів для підвищення
-                            кваліфікації
-                            ваших співробітників.</li>
-                        <li>Широкий спектр продуктів для приготування гарячих напоїв.
-                            Ми гарантуємо максимально можливий прибуток при роботі з нашими продуктами.</li>
+                        <li>Мы предоставляем в аренду оборудование итальянского производителя.</li>
+                        <li>Специалисты компании регулярно посещают наших клиентов, предлагая полный спектр сервисного обслуживания,
+                            от мелкого планового ремонта на месте, до капитального ремонта на
+                            территории
+                            нашей мастерской.</li>
+                        <li>Регулярное обучение вашего персонала, проведение тренингов, семинаров для повышения
+                            квалификации
+                            ваших сотрудников.</li>
+                        <li>Широкий спектр продуктов для приготовления горячих напитков.
+                            Мы гарантируем максимально возможную прибыль при работе с нашими продуктами.</li>
                     </ul>
                 </div>
             </div>
@@ -302,7 +302,7 @@
         </div>
     </div>
     <div class="separator">
-        <h3>Що потрібно для співпраці</h3>
+        <h3>Что нужно для сотрудничества</h3>
     </div>
     <div class="container timeline">
         <div class="row">
@@ -312,11 +312,11 @@
                         <div class="timeline-content" data-original-title="2004">
                             <div class="inner-circle"></div>
                             <p class="num fw-bold">1</p>
-                            <h5>Оформлення</h5>
+                            <h5>Оформление</h5>
                             <p class="lh-sm text-muted">
                                 <small>
-                                    Залиште заявку на нашому сайті по телефону чи
-                                    електронній пошті.
+                                    Оставьте заявку на нашем сайте по телефону или
+                                     с помощью электронной почты.
                                 </small>
                             </p>
                         </div>
@@ -325,13 +325,13 @@
                         <div class="timeline-content">
                             <div class="inner-circle"></div>
                             <p class="num fw-bold">2</p>
-                            <h5>Підтвердження</h5>
+                            <h5>Подтверждение</h5>
                             <p class="lh-sm text-muted">
                                 <small>
-                                    Наш менеджер зв'яжеться з Вами та підготує для Вас найвігіднішу
-                                    пропозицію, виходячи з ваших потреб. Якщо потрібно, проведе презетацію в нашому
-                                    шоурумі,
-                                    або з виїздом до Вас.
+                                    Наш менеджер свяжется с Вами и подготовит для Вас самую выгодное
+                                    предложение, исходя из ваших потребностей. Если
+                                    нужно, проведет презетацию в нашем шоуруме
+                                    или с выездом к Вам.
                                 </small>
                             </p>
                         </div>
@@ -340,11 +340,11 @@
                         <div class="timeline-content">
                             <div class="inner-circle"></div>
                             <p class="num fw-bold">3</p>
-                            <h5>Встановлювання</h5>
+                            <h5>Установка</h5>
                             <p class="lh-sm text-muted">
                                 <small>
-                                    Ми в короткий термін встановимо кавомашину у Вашому
-                                    закладі.
+                                    Мы в короткие сроки установим кофемашину в Вашем.
+                                    заведении.
                                 </small>
                             </p>
                         </div>
@@ -353,11 +353,11 @@
                         <div class="timeline-content">
                             <div class="inner-circle"></div>
                             <p class="num fw-bold">4</p>
-                            <h5>Обслуговування</h5>
+                            <h5>обслуживание</h5>
                             <p class="lh-sm text-muted">
-                                <small>Наш шеф-бариста та сервісний інженер раз на тиждень навідують вас для
-                                    обслуговування та налаштування кавомашини, а також для доставки необхідних
-                                    інгедієнтів.
+                                <small>Наш шеф-бариста и сервисный инженер раз в неделю буду посещать вас для
+                                    обслуживание и настройки кофемашины, а также для доставки необходимых
+                                    ингредиентов.
                                 </small>
                             </p>
                         </div>
