--- a/src/ru/kofemolki_ru.html
+++ b/src/ru/kofemolki_ru.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Обладнання в оренду для кафе, барів, ресторанів Харків, Киів | Професійні кавомолки, що можна взяти в додаток до потстової кавомашини">
-    <meta name="keywords" content="хорека, кавомолка, обладнання, для кафе, для ресторанів, для бара">
+        content="Оборудование для кафе, баров, ресторанов Харьков, Киев | Профессиональные кофемолки, которые можно взять в дополнение к потстовой кофемашине">
+    <meta name="keywords" content="хорека, кофемолка, оборудование, для кафе, для ресторанов, для бара">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Оренда кавомолки Харків | Для кафе, ресторанів | Бианчи Проф</title>
+    <title>Аренда кофемолки Харьков | Для кафе, ресторанов | Бианчи Проф</title>
     <link rel="icon" href="../favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -208,30 +208,30 @@
     </nav>
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
     <div class="separator">
-        <h3>Професійні кавомолки</h3>
+        <h3>Профессиональные кофемолки</h3>
     </div>
     <div class="description container">
         <div class="row">
             <div class="col"></div>
             <div class="col-10">
-                <h5 class="text-center fw-bold"> <small>Кавомолка — це другий головний пристрій в кав'ярні поряд з
-                        кавоваркою. Від її якості і надійності залежить те, наскільки смачним буде еспресо.</small>
+                <h5 class="text-center fw-bold"> <small>Кофемолка — это второе главное устройство в кафе рядом с
+                    кофеваркой. От ее качества и надежности зависит то, насколько вкусным будет эспрессо.</small>
                 </h5>
                 <ul>
                     <small>
                         <li>
-                            Великий діаметр жорен дозволяє змелювати зерно швидко і однорідно. Регулюється ступінь
-                            помолу.
+                            Большой диаметр жерновов позволяет смалывать зерно быстро и однородно. Регулируемая степень
+                            помола.
                         </li>
                         <li>
-                            У контейнер поміщається великий обсяг кави, за раз можна помолоти зерна відразу на кілька
-                            порцій напою.
+                            В контейнер помещается большой объем кофе, за раз можно помолоть зерна сразу на несколько
+                            порций напитков.
                         </li>
                         <li>
-                            Деякі моделі оснащені механічним дозатором.
+                            Некоторые модели оснащены механическим дозатором.
                         </li>
                         <li>
-                            Професійні кавомолки розраховані на підвищені навантаження і тривалу експлуатацію.
+                            Профессиональные кофемолки рассчитаны на повышенные нагрузки и длительную эксплуатацию.
                         </li>
                     </small>
                 </ul>
@@ -251,33 +251,33 @@
                             style="max-width: 90%;" alt="Fiorenzato F64E">
                         <figcaption>
                             <ul>
-                                <li><b>Габарити: <br> </b>Висота 615 мм <br>Ширина 230 мм <br>Глибина 270 мм</li>
+                                <li><b>Габариты: <br> </b>Высота 615 мм <br>Ширина 230 мм <br>Глубина 270 мм</li>
                                 <br>
-                                <li><b>Потужність: <br> </b>350 Вт</li>
+                                <li><b>Мощность: <br> </b>350 Вт</li>
                                 <br>
-                                <li><b>Вага: <br> </b>13 кг</li>
+                                <li><b>Вес: <br> </b>13 кг</li>
                                 <br>
-                                <li><b>Ємність бункера:<br></b>1,5 кг</li>
+                                <li><b>Объём бункера:<br></b>1,5 кг</li>
                                 <br>
-                                <li><b>Виробник: <br> </b>Італія</li>
+                                <li><b>Производитель: <br> </b>Италия</li>
                                 <br>
                             </ul>
                             <div class="timeline text-center">
                                 <button class="btn text-nowrap fw-bold" data-bs-toggle="modal"
-                                    data-bs-target="#Modal">Замовити</button>
+                                    data-bs-target="#Modal">Заказать</button>
                             </div>
                         </figcaption>
                     </figure>
                     <div class="card-body">
                         <h3 class="text-center">Fiorenzato F64E</h3>
                         <small>
-                            <p class="lh-sm indent">Fiorenzato F64E — кавомолка прямого помолу, продумана до дрібниць
-                                для забезпечення максимальної ефективності і практичності.</p>
-                            <p class="lh-sm">Безперервна мікрометрична регулювання помолу з дозатором.</p>
-                            <p class="lh-sm">Плоскі жорна діаметром 64 мм</p>
-                            <p class="lh-sm">Відсутність бункера для змеленої кави і автоматичний режим помолу заданої
-                                кількості порцій прямо в холдер.</p>
-                            <p class="lh-sm">Fiorenzato ідеально підходить для великого комерційного використання.</p>
+                            <p class="lh-sm indent">Fiorenzato F64E — кофемолка прямого помола, продуманная до мелочей
+                                для обеспечения максимальной эффективности и практичности.</p>
+                            <p class="lh-sm">Непрерывная микрометрическая регулировка помола с дозатором.</p>
+                            <p class="lh-sm">Плоские жернова диаметром 64 мм.</p>
+                            <p class="lh-sm">Отсутствие бункера для смолотого кофе и автоматический режим помола заданного
+                                количества порций прямо в холдер.</p>
+                            <p class="lh-sm">Fiorenzato идеально подходит для большого коммерческого использования.</p>
                         </small>
                     </div>
                 </div>
@@ -289,35 +289,35 @@
                             style="max-width: 90%;" alt="Eureka Zenith 65E">
                         <figcaption>
                             <ul>
-                                <li><b>Габарити: <br> </b>Висота 593 мм <br>Ширина 232 мм <br>Глибина 264 мм</li>
+                                <li><b>Габариты: <br> </b>Высота 593 мм <br>Ширина 232 мм <br>Глубина 264 мм</li>
                                 <br>
-                                <li><b>Потужність: <br> </b>500 Вт</li>
+                                <li><b>Мощность: <br> </b>500 Вт</li>
                                 <br>
-                                <li><b>Вага: <br> </b>11,8 кг</li>
+                                <li><b>Вес: <br> </b>11,8 кг</li>
                                 <br>
-                                <li><b>Ємність бункера:<br></b>1,8 кг</li>
+                                <li><b>Объём бункера:<br></b>1,8 кг</li>
                                 <br>
-                                <li><b>Виробник: <br> </b>Італія</li>
+                                <li><b>Производитель: <br> </b>Италия</li>
                                 <br>
                             </ul>
                             <div class="timeline text-center">
                                 <button class="btn text-nowrap fw-bold" data-bs-toggle="modal"
-                                    data-bs-target="#Modal">Замовити</button>
+                                    data-bs-target="#Modal">Заказать</button>
                             </div>
                         </figcaption>
                     </figure>
                     <div class="card-body">
                         <h3 class="text-center">Eureka Zenith 65E</h3>
                         <small>
-                            <p class="lh-sm indent">Кавомолка Eureka Zenith 65E поєднала в собі простоту використання і
-                                стиль споживчої моделі з високою продуктивністю, стабільністю і довговічністю.</p>
-                            <p class="lh-sm">Масивні плоскі жорна діаметром 65 мм, створюють стабільний і рівномірний
-                                помол без грудок.</p>
-                            <p class="lh-sm">Ексклюзивна найтонша регулювання помолу.</p>
-                            <p class="lh-sm">Електронна панель управління з дисплеєм, максимально проста в управлінні.
+                            <p class="lh-sm indent">Кофемолка Eureka Zenith 65E сочетает в себе простоту использования и
+                                стиль потребительской модели с высокой производительностью, стабильностью и долговечностью.</p>
+                            <p class="lh-sm">Массивные плоские жернова диаметром 65 мм, создают стабильный и равномерный
+                                помол без комков.</p>
+                            <p class="lh-sm">Эксклюзивная тончайшая регулировка помола.</p>
+                            <p class="lh-sm">Электронная панель управления с дисплеем, максимально проста в управлении.
                             </p>
-                            <p class="lh-sm">Дві кнопки, що налаштовують дозування кави. Це дає можливість готувати
-                                одинарний і подвійний еспресо з різних холдерів, не змінюючи помол.</p>
+                            <p class="lh-sm">Две кнопки, настраивающие дозировку кофе. Это дает возможность готовить
+                                одинарный и двойной эспрессо из разных холдеров, не меняя помол.</p>
                             <!-- <ul>
                                 <li><b>Габарити (ШхВхГ): </b>232 мм х 593 мм х 264 мм</li>
                                 <li><b>Потужність: </b>500 Вт</li>
