--- a/src/ru/moloko_shokolad_ru.html
+++ b/src/ru/moloko_shokolad_ru.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="✔Готові розчинні суміші можуть значно урізноманітнити меню кавомашини як в чистому вигляді, так і в міксі з кавою
-    ✔Всі продукти вищої якості виробництва Голландії та Італії
-    ✔Яскравий насичений смак, улюблений і впізнаваний багатьма клієнтами">
-    <meta name="keywords" content="bianchi, кава, капучино, молоко, ірландський віскі">
+    <meta name="description" content="✔Готовые растворные смеси могут значительно разнообразить меню кофемашины как в чистом виде, так и в миксе с кофе.
+    ✔Все продукты высшего качества производства Голландии и Италии.
+    ✔Яркий насыщенный вкус, любимый и узнаваемый многими клиентами">
+    <meta name="keywords" content="bianchi, кофе, капучино, молоко, ирландский виски">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Шоколад | Капучино | Молоко | Ірландський Віскі</title>
+    <title>Шоколад | Капучино | Молоко | Ирландский Виски</title>
     <link rel="icon" href="../favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -215,15 +215,15 @@
         <div class="row">
             <div class="col"></div>
             <div class="col-10">
-                <h5 class="text-center fw-bold"> <small>Готові розчинні суміші можуть значно урізноманітнити меню
-                        кавомашини як в чистому вигляді, так і в міксі з кавою.</small> </h5>
+                <h5 class="text-center fw-bold"> <small>Готовые растворимые смеси могут значительно разнообразить меню
+                    кофемашины как в чистом виде, так и в миксе с кофе.</small> </h5>
                 <ul>
                     <small>
                         <li>
-                            Всі продукти вищої якості виробництва Голландії та Італії.
+                            Все продукты высшего качества производства Голландии и Италии.
                         </li>
                         <li>
-                            Яскравий насичений смак, улюблений і впізнаваний багатьма клієнтами.
+                            Яркий насыщенный вкус, любимый и узнаваемый многими клиентами.
                         </li>
                     </small>
                 </ul>
@@ -241,18 +241,18 @@
                         <img src="../img/moloko_shokolad/milk.webp" class="card-img-top combo" alt="Bianchi Creamer">
                         <figcaption class="goods">
                             <ul class="lh-sm">
-                                <li><b>Вага:<br></b>1 кг.</li>
+                                <li><b>Вес:<br></b>1 кг.</li>
                                 <br>
-                                <li><b>Виробник:<br></b>Голандія</li>
+                                <li><b>Производитель:<br></b>Голландия</li>
                             </ul>
                         </figcaption>
                     </figure>
                     <div class="card-body">
-                        <h3 class="text-center">Суха молочна суміш "Bianchi Professional"</h3>
+                        <h3 class="text-center">Сухая молочная смесь "Bianchi Professional"</h3>
                         <small>
-                            <p class="lh-sm"><b>Milk Topping та Creamer</b> ідеально підходять для приготування кавових
-                                напоїв. Молочна суміш вражає своєю кремовою піною і м'яким смаком. Підходить для всіх
-                                типів кавомашин, які працюють з використанням сухого молока.</p>
+                            <p class="lh-sm"><b>Milk Topping та Creamer</b> идеально подходят для приготовления кофейных
+                                напитков. Молочная смесь поражает своей кремовой пеной и мягким вкусом. Подходит для всех
+                                типов кофемашин, работающих с использованием сухого молока.</p>
                         </small>
                     </div>
                 </div>
@@ -263,18 +263,18 @@
                         <img src="../img/moloko_shokolad/hot_cocoa.webp" class="card-img-top" alt="Bianchi Hot Cocoa">
                         <figcaption class="goods">
                             <ul class="lh-sm">
-                                <li><b>Вага:<br></b>1 кг.</li>
+                                <li><b>Вес:<br></b>1 кг.</li>
                                 <br>
-                                <li><b>Виробник:<br></b>Голандія</li>
+                                <li><b>Производитель:<br></b>Голландия</li>
                             </ul>
                         </figcaption>
                     </figure>
                     <div class="card-body">
-                        <h3 class="text-center">Какао розчинне "Bianchi Professional"</h3>
+                        <h3 class="text-center">Какао растворимое"Bianchi Professional"</h3>
                         <small>
-                            <p class="lh-sm">Насичений шоколадний смак і неймовірний аромат Какао Bianchi Professional
-                                піднімає настрій і відмінно тонізує! Добре смакує як в чистому вигляді, так в сумішах з
-                                іншими напоями.</p>
+                            <p class="lh-sm">Насыщенный шоколадный вкус и невероятный аромат Какао Bianchi Professional
+                                поднимает настроение и отлично тонизирует! Вкусно как в чистом виде, так в смесях с
+                                другими напитками.</p>
                         </small>
                     </div>
                 </div>
@@ -285,18 +285,18 @@
                         <img src="../img/moloko_shokolad/irish.webp" class="card-img-top" alt="Bianchi Irish Whiskey">
                         <figcaption class="goods">
                             <ul class="lh-sm">
-                                <li><b>Вага:<br></b>1 кг.</li>
+                                <li><b>Вес:<br></b>1 кг.</li>
                                 <br>
-                                <li><b>Виробник:<br></b>Голандія</li>
+                                <li><b>Производитель:<br></b>Голландия</li>
                             </ul>
                         </figcaption>
                     </figure>
                     <div class="card-body">
-                        <h3 class="text-center">Капучино Bianchi Ірландський Віскі</h3>
+                        <h3 class="text-center">Капучино Bianchi Ирландский Виски</h3>
                         <small>
-                            <p class="lh-sm">Напій, що м'яко розкривається на молочній основі. Грайливого настрою додає
-                                лісовий горіх, що верхніми нотами нагадує той самий напій, в честь якого і назва. А
-                                солодка цукерка завершує композицію шоколадним смаком.</p>
+                            <p class="lh-sm">Мягко раскрывающийся на молочной основе напиток. Игривое настроение добавляет
+                                лесной орех, который верхними нотами напоминает тот самый напиток, в честь которого и название. А
+                                сладкая конфета завершает композицию шоколадным вкусом.</p>
                         </small>
                     </div>
                 </div>
@@ -308,17 +308,17 @@
                             alt="Bianchi Crema Catalana">
                         <figcaption class="goods">
                             <ul class="lh-sm">
-                                <li><b>Вага:<br></b>1 кг.</li>
+                                <li><b>Вес:<br></b>1 кг.</li>
                                 <br>
-                                <li><b>Виробник:<br></b>Голандія</li>
+                                <li><b>Производитель:<br></b>Голландия</li>
                             </ul>
                         </figcaption>
                     </figure>
                     <div class="card-body">
                         <h3 class="text-center">Капучино Bianchi Крема Каталана</h3>
                         <small>
-                            <p class="lh-sm">Ніжний смак каталонського десерту, що делікатно поєднує в собі смак
-                                крем-брюле, нотки ванілі та карамельні відтінки.</p>
+                            <p class="lh-sm">Нежный вкус каталонского десерта, деликатно сочетающий в себе вкус
+                                крем-брюле, нотки ванили и карамельные оттенки.</p>
                         </small>
                     </div>
                 </div>
@@ -334,22 +334,22 @@
                             alt=" Tasarone Black Edition">
                         <figcaption class="goods">
                             <ul class="lh-sm">
-                                <li><b>Вага:<br></b>1 кг.</li>
+                                <li><b>Вес:<br></b>1 кг.</li>
                                 <br>
-                                <li><b>Виробник:<br></b>Голандія</li>
+                                <li><b>Производитель:<br></b>Голландия</li>
                             </ul>
                         </figcaption>
                     </figure>
                     <div class="card-body">
                         <h3 class="text-center">Шоколад Tasarone "Black Edition"</h3>
                         <small>
-                            <p class="lh-sm">Темний гарячий шоколад <b>Tasarone "Black Edition"</b> — чудовий напій,
-                                створений для справжніх гурманів.</p>
-                            <p class="lh-sm">Підвищений вміст какао-порошку(32%).</p>
-                            <p class="lh-sm">Більш консервативний смак і аромат, ніж у Tasarone Primo Gusto.</p>
-                            <p class="lh-sm">Тут використаний інший сорт какао і менше цукру.</p>
-                            <p class="lh-sm">Не містить консервантів, барвників, додаткових ароматизаторів,
-                                стабілізаторів, підсилювачів смаку та інших харчових добавок.</p>
+                            <p class="lh-sm">Тёмный горячий шоколад <b>Tasarone "Black Edition"</b> — чотличный напиток,
+                                созданный для настоящих гурманов.</p>
+                            <p class="lh-sm">Повышенное содержание какао-порошка (32%).</p>
+                            <p class="lh-sm">Более консервативный вкус и аромат, чем у Tasarone Primo Gusto.</p>
+                            <p class="lh-sm">Здесь использован другой сорт какао и меньше сахара.</p>
+                            <p class="lh-sm">Не содержит консервантов, красителей, дополнительных ароматизаторов,
+                                стабилизаторов, усилителей вкуса и других пищевых добавок.</p>
                         </small>
                     </div>
                 </div>
@@ -361,21 +361,21 @@
                             alt="Tasarone Primo Gusto">
                         <figcaption class="goods">
                             <ul class="lh-sm">
-                                <li><b>Вага:<br></b>1 кг.</li>
+                                <li><b>Вес:<br></b>1 кг.</li>
                                 <br>
-                                <li><b>Виробник:<br></b>Голандія</li>
+                                <li><b>Производитель:<br></b>Голландия</li>
                             </ul>
                         </figcaption>
                     </figure>
                     <div class="card-body">
                         <h3 class="text-center">Шоколад Tasarone "Primo Gusto"</h3>
                         <small>
-                            <p class="lh-sm"> <b>Tasarone "Primo Gusto"</b> — гарячий шоколад з дуже м'яким і ніжним
-                                смаком.</p>
-                            <p class="lh-sm">Вміст какао-порошку меньший, ніж в Primo Gusto (16-17%).</p>
-                            <p class="lh-sm">Розкриває вершковий смак в парі з молоком.</p>
-                            <p class="lh-sm">Не містить консервантів, барвників, додаткових ароматизаторів,
-                                стабілізаторів, підсилювачів смаку та інших харчових добавок.</p>
+                            <p class="lh-sm"> <b>Tasarone "Primo Gusto"</b> — горячий шоколад с очень мягким и нежным
+                                вкусом.</p>
+                            <p class="lh-sm">Содержание какао-порошка меньше, чем у Primo Gusto (16-17%).</p>
+                            <p class="lh-sm">Раскрывает сливочный вкус в паре с молоком.</p>
+                            <p class="lh-sm">Не содержит консервантов, красителей, дополнительных ароматизаторов,
+                                стабилизаторов, усилителей вкуса и других пищевых добавок.</p>
                         </small>
                     </div>
                 </div>
