--- a/src/ru/postovie_ru.html
+++ b/src/ru/postovie_ru.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="✔Оренда професійних постових кавомашин для кафе та ресторанів Bianchi Professional ✔В комплекті можна взяти професійну кавомолку">
+        content="✔Аренда профессиональных постовых кофемашин для кафе и ресторанов Bianchi Professional ✔В комплекте можно взять профессиональную кофемолку">
     <meta name="keywords"
-        content="хорека, обладнання, кава,  кавове обладнання,  кавомашина в офіс, кавомашина в кафе, кавомашина в ресторан, професійне кавове обладнання">
+        content="хорека, оборудование, кофе, кофемашина, кофемашина в офис, кофемашина в кафе, кофемашина в ресторан, профессиональное кофемашина">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Професійна кавомашина для кафе, ресторанів в Київі, Харкові | Bianchi</title>
+    <title>Профессиональная кофемашина для кафе, ресторанов в Киеве, Харькове | Bianchi</title>
     <link rel="icon" href="../favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -208,29 +208,29 @@
         </div>
     </nav>
     <div class="separator">
-        <h3>Класичні постові кавомашини</h3>
+        <h3>Классические постовые кофемашины</h3>
     </div>
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
     <div class="description container">
         <div class="row">
             <div class="col"></div>
             <div class="col-10">
-                <h5 class="text-center fw-bold"> <small>Класичні постові кавомашини без сумніву відносяться до
-                        професійного обладнання для приготування кави. Використовуються в кафе, барах, кав'ярнях,
-                        ресторанах. Істинний інструмент справжніх барист.</small> </h5>
+                <h5 class="text-center fw-bold"> <small>Классические постовые кофемашины несомненно относятся к
+                    профессионального оборудования для приготовления кофе. Используются в кафе, барах, кофетериях,
+                    ресторанах. Истинный инструмент настоящих барист.</small> </h5>
                 <ul>
                     <small>
                         <li>
-                            Не мають вбудованих кавомолок, тому всі кавові суміші готуються вручну.
+                            Нет встроенных кофемолок, поэтому все кофейные смеси готовятся вручную.
                         </li>
                         <li>
-                            Велика різноманітність і висока якість приготованих напоїв.
+                            Большое разнообразие и высокое качество приготовленных напитков.
                         </li>
                         <li>
-                            Широта маневрів і можливість творчого підходу до приготування напоїв.
+                            Широта маневров и возможность творческого подхода к приготовлению напитков.
                         </li>
                         <li>
-                            Надійність і довговічність.
+                            Надежность и долговечность.
                         </li>
                     </small>
                 </ul>
@@ -249,18 +249,18 @@
                 <div class="card-body">
                     <h3 class="mb-5" style="margin-left: 20%;">Bianchi Sofia A2</h3>
                     <small>
-                        <p class="card-text">Bianchi Sofia A2 — професійна двопостова кавова машина. <br>
-                            Обладнана двома варильними групами. <br>
-                            Два крана для пара з нержавіючої сталі <br>
-                            Підключається до водопроводу. Обсяг бойлера 12л. <br>
-                            Велика платформа для чашок з електропідігрівом. <br>
-                            Ручний капучинатор для збивання пишної молочної пінки. <br>
-                            Наявність датчика рівня води і тиску. <br>
-                            Кавомолки можна подивитися тут</p>
+                        <p class="card-text">Bianchi Sofia A2 — профессиональная двухпостная кофемашина. <br>
+                            Оборудована двумя варочными группами. <br>
+                            Два крана для пара из нержавеющей стали. <br>
+                            Подключается к водопроводу. Объем бойлера 12л. <br>
+                            Большая платформа для чашек с электроподогревом. <br>
+                            Ручной капучинатор для взбивания пышной молочной пенки. <br>
+                            Наличие датчика уровня воды и давления. <br>
+                            Кофемолки можно посмотреть <a href="./kofemolki_ru.html">здесь</a>.</p>
                         <ul>
-                            <li><b>Габарити (ШхВхГ): </b>310 мм х 635 мм х 475 мм</li>
-                            <li><b>Потужність: </b>1,8 кВт</li>
-                            <li><b>Вага: </b>27 кг</li>
+                            <li><b>Габариты (ШхВхГ): </b>310 мм х 635 мм х 475 мм</li>
+                            <li><b>Мощность: </b>1,8 кВт</li>
+                            <li><b>Вес: </b>27 кг</li>
                         </ul>
                     </small>
                 </div>
@@ -268,7 +268,7 @@
         </div>
     </div>
     <div class="timeline text-center">
-        <button class="btn text-nowrap fw-bold" data-bs-toggle="modal" data-bs-target="#Modal">Залишити заявку</button>
+        <button class="btn text-nowrap fw-bold" data-bs-toggle="modal" data-bs-target="#Modal">Оставить заявку</button>
     </div>
     <!-- /////////////////////////////////////////   Footer    ////////////////////////////////////////     -->
     <footer class="footer">
