--- a/src/ru/vending_ru.html
+++ b/src/ru/vending_ru.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="✔Встановлення та обслуговування вендінгового обладнання  ✔Кавові та снекові автомати ✔Оригінальні напої ✔Сучасне обладнання">
-    <meta name="keywords" content="кава,  вендінг, кавовий автомат, снековий автомат">
+        content="✔Установка и обслуживание вендингового оборудования ✔Кофейные и снековые автоматы ✔Оригинальные напитки ✔Современное оборудование">
+    <meta name="keywords" content="кофе, вендинг, кофейный автомат, снековый автомат">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Вендінг кава Украіна | Умови оренди | Bianchi Professional</title>
+    <title>Вендинг кофе Украина | Условия аренды | Bianchi Professional</title>
     <link rel="icon" href="../favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -207,7 +207,7 @@
         </div>
     </nav>
     <div class="separator">
-        <h3>Встановлення кавових та снекових вендінгових апаратів</h3>
+        <h3>Установка кофейных и снековых вендинговых аппаратов</h3>
     </div>
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
     <div class="banner">
@@ -223,11 +223,11 @@
                     <div class="card text-center">
                         <img src="../img/dlya_magazinov_i_setey/icon.webp" class="card-img-top" alt="icon">
                         <div class="card-body">
-                            <h5 class="fw-bold">Встановлення кавомашин впродовж однієї доби <span class="select">
+                            <h5 class="fw-bold">Установка кофемашин в течение одних суток <span class="select">
                                     *</span></h5>
-                            <p class="card-text">Після узгодження всіх питань, встановлення здійснюється в максимально
-                                стислі терміни.
-                                <br> <br> <span class="select">* </span> Залежно від міста встановлення
+                            <p class="card-text">После согласования всех вопросов, установка осуществляется в максимально
+                                сжатые сроки.
+                                <br> <br> <span class="select">* </span> В зависимости от города установки.
                             </p>
                         </div>
                     </div>
@@ -236,10 +236,10 @@
                     <div class="card text-center">
                         <img src="../img/dlya_magazinov_i_setey/icon.webp" class="card-img-top" alt="icon">
                         <div class="card-body">
-                            <h5 class="fw-bold">Кавові апарати європейської якості <br> та доставка</h5>
-                            <p class="card-text">Ми використовуємо кавомашини відомого виробника в світі торговельних
-                                апаратів Bianchi (Італія), що випускає якісні, надійні, економічні і зручні в роботі
-                                моделі.
+                            <h5 class="fw-bold">Кофейные аппараты европейского качества <br> и доставка</h5>
+                            <p class="card-text">Мы используем кофемашины известного производителя в мире торговых
+                                аппаратов Bianchi (Италия), выпускающего качественные, надежные, экономичные и удобные в работе
+                                модели.
                             </p>
                         </div>
                     </div>
@@ -248,9 +248,9 @@
                     <div class="card text-center">
                         <img src="../img/dlya_magazinov_i_setey/icon.webp" class="card-img-top" alt="icon">
                         <div class="card-body">
-                            <h5 class="fw-bold">Тільки натуральна зернова кава</h5>
-                            <p class="card-text">Для приготування напоїв ми використовуємо зернову каву вищого гатунку і
-                                складові провідних виробників Bianchi Professional, ICS.</p>
+                            <h5 class="fw-bold">Только натуральный зерновой кофе</h5>
+                            <p class="card-text">Для приготовления напитков мы используем зерновой кофе высшего сорта
+                                составляющие ведущих производителей Bianchi Professional, ICS.</p>
                         </div>
                     </div>
                 </div>
@@ -259,7 +259,7 @@
     </section>
     <!-- /////////////////////////////////////////   Magazin    ////////////////////////////////////////     -->
     <div class="separator">
-        <h3>Послуги</h3>
+        <h3>Услуги</h3>
     </div>
     <div class="magazine container">
         <div class="row">
@@ -267,14 +267,14 @@
                 <img src="../img/vending/vending.webp" class="p-3 img-fluid" alt="magazin">
             </div>
             <div class="col-lg-6">
-                <p class="p-4 magazine indent">Складно уявити життя будь-якої сучасної компанії без аромату кави.
-                    Найбільш
-                    зручний і вигідний спосіб підвищити комфорт і ефективність роботи ваших співробітників -
-                    встановлення кавових автоматів в вашому офісі, на підприємстві або в торговому/бізнес центрі,
-                    магазині, начальному закладі.
-                    Пропонуємо встановлення та обслуговування кавового обладнання преміум-класу (виробник - Італія).
-                    Апарати готують якісну зернову каву від лідерів європейського ринку та різноманітні не кавові напої
-                    - Cappuccino Crema Catalana, Cappuccino Irish Whiskey, гарячий шоколад, чай.</p>
+                <p class="p-4 magazine indent">Сложно вообразить жизнь любой современной компании без аромата кофе.
+                    Наиболее
+                    удобный и выгодный способ повысить комфорт и эффективность работы ваших сотрудников - 
+                    установка кофейных автоматов в вашем офисе, на предприятии или в торговом/бизнес центре,
+                    магазине, начальном заведении.
+                    Предлагаем установку и обслуживание кофейного оборудования премиум-класса (производитель – Италия).
+                    Аппараты готовят качественный зерновой кофе от лидеров европейского рынка и разнообразные кофейные напитки
+                    - Cappuccino Crema Catalana, Cappuccino Irish Whiskey, горячий шоколад, чай.</p>
             </div>
         </div>
     </div>
@@ -285,16 +285,16 @@
         <div class="row">
             <div class="col-lg-6">
                 <div class="p-4">
-                    <h5 class="green text-center">Переваги установки</h5>
+                    <h5 class="green text-center">Преимущества установки</h5>
                     <ul>
-                        <li>Вам не потрібно дбати про заправку інгредієнтів та ремонт обладнання. Насолоджуйтесь
-                            ароматною кавою від лідерів Європейського ринку.</li>
-                        <li>Безкоштовна гаряча лінія для клієнтів.</li>
-                        <li>Можливість оплачувати напої банківською карткою за допомогою мобільного додатку.</li>
-                        <li>Сучасний дизайн та простота використання обладнання.</li>
-                        <li>До можливого мінімуму скорочуються перерви на каву. Час приготування напою не більше кількох
-                            хвилин.</li>
-                        <li>Зростає продуктивність праці – свіжа кава не дає співробітникам спати на робочому місці.
+                        <li>Вам не нужно заботиться о загрузке ингредиентов и ремонте оборудования. Наслаждайтесь
+                            ароматным кофе от лидеров Европейского рынка.</li>
+                        <li>Бесплатная линия для клиентов.</li>
+                        <li>Возможность оплачивать напитки банковской картой с помощью мобильного приложения.</li>
+                        <li>Современный дизайн и простота использования оборудования.</li>
+                        <li>До возможного минимума сокращаются перерывы на кофе. Время приготовления напитка не более нескольких
+                            минут.</li>
+                        <li>Растет производительность труда – свежий кофе не дает сотрудникам спать на рабочем месте.
                         </li>
                     </ul>
                 </div>
@@ -305,7 +305,7 @@
         </div>
     </div>
     <div class="separator">
-        <h3>Що потрібно для встановлення кавомашини</h3>
+        <h3>Что нужно для установки кофемашины</h3>
     </div>
     <div class="container timeline">
         <div class="row">
@@ -315,11 +315,11 @@
                         <div class="timeline-content">
                             <div class="inner-circle"></div>
                             <p class="num fw-bold">1</p>
-                            <h5>Оформлення</h5>
+                            <h5>Оформление</h5>
                             <p class="lh-sm text-muted">
                                 <small>
-                                    Залиште заявку на нашому сайті по телефону чи
-                                    електронній пошті.
+                                    Оставьте заявку на нашем сайте по телефону или
+                                    с помощью электронной почты.
                                 </small>
                             </p>
                         </div>
@@ -328,10 +328,10 @@
                         <div class="timeline-content">
                             <div class="inner-circle"></div>
                             <p class="num fw-bold">2</p>
-                            <h5>Підтвердження</h5>
+                            <h5>Подтверждение</h5>
                             <p class="lh-sm text-muted">
                                 <small>
-                                    Наш фахівець зв'яжеться з Вами для визначення місця установки кавового апарату<span
+                                    Наш специалист свяжется с Вами для определения места установки кофейного аппарата<span
                                         class="select">*</span>
                                 </small>
                             </p>
@@ -341,11 +341,11 @@
                         <div class="timeline-content">
                             <div class="inner-circle"></div>
                             <p class="num fw-bold">3</p>
-                            <h5>Встановлювання</h5>
+                            <h5>Установка</h5>
                             <p class="lh-sm text-muted">
                                 <small>
-                                    Ми з радістю встановимо кавомашину у Вашому офісі, торгівельному центрі, магазині,
-                                    автомайстерні, навчальному, медичному або спортивному закладі.
+                                    Мы с радостью установим кофемашину в Вашем офисе, торговом центре, магазине,
+                                    автомастерской, учебном, медицинском или спортивном заведении.
                                 </small>
                             </p>
                         </div>
@@ -354,10 +354,10 @@
                         <div class="timeline-content">
                             <div class="inner-circle"></div>
                             <p class="num fw-bold">4</p>
-                            <h5>Обслуговування</h5>
+                            <h5>Обслуживание</h5>
                             <p class="lh-sm text-muted">
                                 <small>
-                                    Абсолютно безкоштовна установка і обслуговуванна апарату преміум класу
+                                    Абсолютно бесплатная установка и обслуживание аппарата премиум класса.
                                 </small>
                             </p>
                         </div>
@@ -369,18 +369,18 @@
     <div class="container">
         <p>
             <small>
-                <span class="select">* </span> Для встановлення необхідно: 1 кв.метр вільної площі, електрична розетка
+                <span class="select">* </span> Для установки необходимо: 1 кв.метр свободной площади, электрическая розетка
                 220 вольт.
             </small>
         </p>
     </div>
     <div class="timeline text-center">
-        <button class="btn text-nowrap fw-bold" data-bs-toggle="modal" data-bs-target="#Modal">Замовити установку
-            кавомашини</button>
+        <button class="btn text-nowrap fw-bold" data-bs-toggle="modal" data-bs-target="#Modal">Заказать установку
+            кофемашины</button>
     </div>
     <!-- /////////////////////////////////////////   Equipment    ////////////////////////////////////////     -->
     <div class="separator">
-        <h3>Обладнання</h3>
+        <h3>Оборудование</h3>
     </div>
     <div class="container carousel-wrapper">
         <div class="row">
@@ -389,32 +389,32 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active" data-bs-interval="3500">
                             <img src="../img/vending/slider/slider.webp" class="d-block w-100 p-3" alt="coffemashine">
-                            <a href="./vending_avtomaty_ru.html" class="btn text-nowrap fw-bold">Детальніше</a>
+                            <a href="./vending_avtomaty_ru.html" class="btn text-nowrap fw-bold">Подробнее</a>
                         </div>
                         <div class="carousel-item" data-bs-interval="3500">
                             <img src="../img/vending/slider/400_podp.webp" class="d-block w-100 p-3" alt="lei-400">
-                            <a href="./vending_avtomaty_ru.html" class="btn text-nowrap fw-bold">Детальніше</a>
+                            <a href="./vending_avtomaty_ru.html" class="btn text-nowrap fw-bold">Подробнее</a>
                         </div>
                         <div class="carousel-item" data-bs-interval="3500">
                             <img src="../img/vending/slider/500.webp" class="d-block w-100 p-3" alt="lei-500">
-                            <a href="./vending_avtomaty_ru.html" class="btn text-nowrap fw-bold">Детальніше</a>
+                            <a href="./vending_avtomaty_ru.html" class="btn text-nowrap fw-bold">Подробнее</a>
                         </div>
                         <div class="carousel-item" data-bs-interval="3500">
                             <img src="../img/vending/slider/600_podp2.webp" class="d-block w-100 p-3" alt="lei-600">
-                            <a href="./vending_avtomaty_ru.html" class="btn text-nowrap fw-bold">Детальніше</a>
+                            <a href="./vending_avtomaty_ru.html" class="btn text-nowrap fw-bold">Подробнее</a>
                         </div>
                         <div class="carousel-item" data-bs-interval="3500">
                             <img src="../img/vending/slider/600_sensor_podp.webp" class="d-block w-100 p-3"
                                 alt="lei-600sensor">
-                            <a href="./vending_avtomaty_ru.html" class="btn text-nowrap fw-bold">Детальніше</a>
+                            <a href="./vending_avtomaty_ru.html" class="btn text-nowrap fw-bold">Подробнее</a>
                         </div>
                         <div class="carousel-item" data-bs-interval="3500">
                             <img src="../img/vending/slider/700_podp.webp" class="d-block w-100 p-3" alt="lei-700">
-                            <a href="./vending_avtomaty_ru.html" class="btn text-nowrap fw-bold">Детальніше</a>
+                            <a href="./vending_avtomaty_ru.html" class="btn text-nowrap fw-bold">Подробнее</a>
                         </div>
                         <div class="carousel-item" data-bs-interval="3500">
                             <img src="../img/vending/slider/vista.webp" class="d-block w-100 p-3" alt="vista">
-                            <a href="./vending_avtomaty_ru.html" class="btn text-nowrap fw-bold">Детальніше</a>
+                            <a href="./vending_avtomaty_ru.html" class="btn text-nowrap fw-bold">Подробнее</a>
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
@@ -430,13 +430,13 @@
                 </div>
             </div>
             <div class="col-lg-6">
-                <p class="card-text lh-sm indent">Наші вендінгові апарати обладнані системою оплати банківською картою
-                    за допомогою
-                    мобільного додатку ProstoPay, а також Googl Pay, Apple Pay, NFC</p>
+                <p class="card-text lh-sm indent">Наши вендинговые аппараты оборудованы системой оплаты банковской картой
+                    с помощью
+                    мобильного приложения ProstoPay, а также Googl Pay, Apple Pay, NFC</p>
                 <img src="../img/vending/oplata.webp" class="p-3 img-fluid" alt="pay">
-                <p class="card-text lh-sm indent">Додаток підтримується OS Android та MAC OS. Завантажити додаток ви
-                    можете за
-                    посиланнями нижче або відсканувавши QR код безпосередньо з апарату.</p>
+                <p class="card-text lh-sm indent">Приложение поддерживается OS Android и MAC OS. Скачать приложение вы
+                    можете по
+                    ссылками ниже или отсканировав QR код непосредственно с аппарата.</p>
                 <div class="row">
                     <div class="col-lg-6">
                         <a href="https://apps.apple.com/ru/app/prostopay/id1377010486"><img
@@ -453,7 +453,7 @@
     <!-- /////////////////////////////////////////   Partners    ////////////////////////////////////////     -->
     <div class="partners-wrapper">
         <div class="separator">
-            <h3>Наші партнери</h3>
+            <h3>Наши партнёры</h3>
         </div>
         <div class="container text-center partners mb-4">
             <div class="row g-0">
@@ -524,7 +524,7 @@
             </div>
         </div>
         <div class="container hr-line"></div>
-        <p class="text-center green fw-bold">Бажаєте стати нашим партнером? Чекаємо на ваш дзвінок або повідомлення.</p>
+        <p class="text-center green fw-bold">Хотите стать нашим партнёром? Ждем вашего звонка или сообщения.</p>
     </div>
     <!-- /////////////////////////////////////////   Footer    ////////////////////////////////////////     -->
     <footer class="footer">
