--- a/src/ru/zernovoy_kofe_ru.html
+++ b/src/ru/zernovoy_kofe_ru.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Богатство смаку і аромату, відбірні зерна і ідеально відточені рецепти блендів - основні відмінні особливості кави Bianchi.">
-    <meta name="keywords" content="bianchi, кава, зернова кава, кава в зернах, кава хорека">
+        content="Богатство вкуса и аромата, отборные зёрна и идеально отточенные рецепты блендов – основные отличительные особенности кофе Bianchi.">
+    <meta name="keywords" content="bianchi, кофе, зерново кофе, кофе в зернах, кофе хорека">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Зернова кава | Кава | Чай | Капучино | Bianchi Professional</title>
+    <title>Зерновой кофе | Кофе | Чай | Капучино | Bianchi Professional</title>
     <link rel="icon" href="../favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -207,26 +207,26 @@
         </div>
     </nav>
     <div class="separator">
-        <h3>Зернова кава</h3>
+        <h3>Зерновой кофе</h3>
     </div>
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
     <div class="description container">
         <div class="row">
             <div class="col"></div>
             <div class="col-10">
-                <h5 class="text-center fw-bold"> <small>Кава міцно увійшла в наше життя. Багато хто просто не мислить
-                        ранок без чашечки ароматного напою. Але ж і справді — вона допомагає прокинутися навіть в саму
-                        похмуру погоду.</small> </h5>
+                <h5 class="text-center fw-bold"> <small>Кофе крепко вошел в нашу жизнь. Многие просто не мыслят
+                    утро без чашечки ароматного напитка. А ведь действительно — она помогает проснуться даже в самую
+                        хмурую погоду.</small> </h5>
                 <ul>
                     <small>
                         <li>
-                            Наша кава виготовлена на ультрасучасних кавових фабриках Італії та Голандії (ICS) із
-                            застосуванням найкращого обладнання та професійних знань висококласних світових
-                            спеціалістів.
+                            Наш кофе изготовлен на ультрасовременных кофейных фабриках Италии и Голландии (ICS) с
+                            применением лучшего оборудования и профессиональных знаний высококлассных мировых
+                            специалистов.
                         </li>
                         <li>
-                            Багатство смаку і аромату, відбірні зерна і ідеально відточені рецепти блендів - основні
-                            відмінні особливості нової лінійки кави Bianchi.
+                            Богатство вкуса и аромата, отборные зерна и идеально отточенные рецепты блендов – основные
+                            отличные особенности новой линейки кофе Bianchi.
                         </li>
                     </small>
                 </ul>
@@ -244,17 +244,17 @@
                         <img src="../img/zernovoy_kofe/Classic.webp" class="card-img-top" alt="Bianchi Classic">
                         <figcaption class="goods">
                             <ul class="lh-sm">
-                                <li><b>Вага:<br></b>1 кг.</li>
+                                <li><b>Вес:<br></b>1 кг.</li>
                                 <br>
-                                <li><b>Виробник:<br></b>Голандія</li>
+                                <li><b>Производитель:<br></b>Голландия</li>
                             </ul>
                         </figcaption>
                     </figure>
                     <div class="card-body">
-                        <h3 class="text-center">Кава в зернах Bianchi <br> "Classic"</h3>
+                        <h3 class="text-center">Кофе в зернах Bianchi <br> "Classic"</h3>
                         <small>
-                            <p class="lh-sm">Classic — збалансований смак класичного обсмажування. Міцна кава, з
-                                горіховим запахом, гіркувато-солодка з переважанням "смажених" відтінків смаку.</p>
+                            <p class="lh-sm">Classic — сбалансированный вкус классического обжаривания. Крепкий кофе, с
+                                ореховым запахом, горьковато-сладкий с преобладанием "жареных" оттенков вкуса.</p>
                         </small>
                     </div>
                 </div>
@@ -265,17 +265,17 @@
                         <img src="../img/zernovoy_kofe/Beans1.webp" class="card-img-top" alt="Bianchi #1 Beans Blend">
                         <figcaption class="goods">
                             <ul class="lh-sm">
-                                <li><b>Вага:<br></b>1 кг.</li>
+                                <li><b>Вес:<br></b>1 кг.</li>
                                 <br>
-                                <li><b>Виробник:<br></b>Голандія</li>
+                                <li><b>Производитель:<br></b>Голландия</li>
                             </ul>
                         </figcaption>
                     </figure>
                     <div class="card-body">
-                        <h3 class="text-center">Кава в зернах Bianchi #1 Beans Blend</h3>
+                        <h3 class="text-center">Кофе в зернах Bianchi #1 Beans Blend</h3>
                         <small>
-                            <p class="lh-sm">Bianchi #1 — відмінний варіант для ранкової кави. Міцна, з запахом темного
-                                шоколаду. Гіркуватий, з делікатною кислинкою смак, з легкими "смаженими" нотками.</p>
+                            <p class="lh-sm">Bianchi #1 — отличный вариант для утреннего кофе. Крепкий, с запахом темного
+                                шоколада. Горьковатый, с деликатной кислинкой вкус, с легкими "жареными" нотками.</p>
                         </small>
                     </div>
                 </div>
@@ -286,20 +286,20 @@
                         <img src="../img/zernovoy_kofe/Elit.webp" class="card-img-top" alt="Bianchi Elite">
                         <figcaption class="goods">
                             <ul class="lh-sm">
-                                <li><b>Вага:<br></b>1 кг.</li>
+                                <li><b>Вес:<br></b>1 кг.</li>
                                 <br>
-                                <li><b>Виробник:<br></b>Голандія</li>
+                                <li><b>Производитель:<br></b>Голландия</li>
                             </ul>
                         </figcaption>
                     </figure>
                     <div class="card-body">
-                        <h3 class="text-center">Кава в зернах Bianchi "Elite"</h3>
+                        <h3 class="text-center">Кофе в зернах Bianchi "Elite"</h3>
                         <small>
-                            <p class="lh-sm">Elite— високоякісне зерно, що поєднує в собі делікатну кислинку та
-                                насичений смак професійного обсмаження.</p>
-                            <p class="lh-sm">Перший ковток розкривається яскравим апельсином та продовжується червоним
-                                яблоком. А шоколадний післясмак вдало поєднується із завершуючою нотою мускатного
-                                горіха.</p>
+                            <p class="lh-sm">Elite — высококачественное зерно, сочетающее в себе деликатную кислинку и
+                                насыщенный вкус профессиональной обжарки.</p>
+                            <p class="lh-sm">Первый глоток раскрывается ярким апельсином и продолжается красным
+                                яблоком. А шоколадное послевкусие удачно сочетается с завершающей мускатной нотой
+                                ореха.</p>
                         </small>
                     </div>
                 </div>
@@ -310,19 +310,19 @@
                         <img src="../img/zernovoy_kofe/Fresh.webp" class="card-img-top" alt="Fresh Coffee Roasters">
                         <figcaption class="goods">
                             <ul class="lh-sm">
-                                <li><b>Вага:<br></b>1 кг.</li>
+                                <li><b>Вес:<br></b>1 кг.</li>
                                 <br>
-                                <li><b>Свіжа<br>обжарка</b></li>
+                                <li><b>Свежая<br>обжарка</b></li>
                             </ul>
                         </figcaption>
                     </figure>
                     <div class="card-body">
-                        <h3 class="text-center">Кава в зернах Bianchi "Fresh Coffee Roasters"</h3>
+                        <h3 class="text-center">Кофе в зернах Bianchi "Fresh Coffee Roasters"</h3>
                         <small>
-                            <p class="lh-sm">Bianchi Fresh — м'яко обсмажене зерно із помірною яблучною кислинкою.
-                                Зелене яблуко та стигла вишня в поєднанні дають свіжий смак, який доповнюють останнім
-                                ковтком фундук та шоколад.</p>
-                            <p class="lh-sm">Саме з такої кави добре починається ранок.</p>
+                            <p class="lh-sm">Bianchi Fresh — мягко обжаренное зерно с умеренной яблочной кислинкой.
+                                Зеленое яблоко и спелая вишня в сочетании дают свежий вкус, дополняемый последним
+                                глотком фундук и шоколад.</p>
+                            <p class="lh-sm">Именно с такого кофе хорошо начинается утро.</p>
                         </small>
                     </div>
                 </div>
