--- a/src/ru/index_ru.html
+++ b/src/ru/index_ru.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="✔Професійне кавовое обладнанняв аренду
-    ✔Більше 5000 клієнтів ✔Оригінальна рецептура напоїв✔16 років присутності на ринку">
+    <meta name="description" content="✔Профессиональное кофейное оборудование в аренду
+    ✔Более 5000 клиентов ✔Оригинальная рецептура напитков ✔16 лет присутствия на рынке">
     <meta name="keywords"
-        content="кава, кавомашина в оренду, оренда, оренда кавоварки, прокат, кавомашина в прокат, кавовий бізнес, кавоварка">
+        content="кофе, кофемашина в аренду, аренда, аренда кофеварки, прокат, кофемашина в прокат, кофеварка, кофеварка">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Кава для бізнесу | Про компанію | Оренда | Кава | Bianchi Professional</title>
+    <title>Кофе для бизнеса | О компании | Аренда | Кофе | Bianchi Professional</title>
     <link rel="icon" href="../favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -222,23 +222,23 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <h1 class="green text-center">ПРО КОМПАНИЮ</h1>
+                    <h1 class="green text-center">О КОМПАНИИ</h1>
                     <p class="indent">
-                        Ми — команда професіоналів, яка працює на кавовому ринку України з 2005 року. За цей час ми
-                        здобули великий досвід в організації сервісу гарячих напоїв. Наша діяльність допомагає партнерам
-                        задовольнити потреби своїх клієнтів в цьому напрямку. Розроблені нами оригінальні рецепти
-                        впізнавані споживачами завдяки новітнім смакам та оформленню напоїв.
+                        Мы — команда профессионалов, которая работает на кофейном рынке Украины с 2005 года. За это время мы
+                        получили большой опыт в организации сервиса горячих напитков. Наша деятельность помогает партнерам
+                        удовлетворить потребности своих клиентов в этом направлении. Разработанные нами оригинальные рецепты
+                        узнаваемы потребителями благодаря новейшим вкусам и оформлению напитков.
                     </p>
                     <ul>
-                        <li>Більше 5000 клієнтів та торгівельних точок співпрацюють з нами.</li>
-                        <li>Понад 3 000 000 оригінальних напоїв щомісяця смакують наші щасливі споживачі.</li>
-                        <li>В 24 регіонах України помітна наша присутність (завдяки вендінговій мережі).</li>
-                        <li>16 років присутності на ринку дає можливості задовольнити будь-які потреби наших партнерів
-                            на всій території Україні.</li>
-                        <li>Фахівці компанії регулярно відвідують наших клієнтів, пропонуючи повний спектр сервісного
-                            обслуговування, від дрібного планового ремонту на місці, до капітального ремонту на
-                            території нашої майстерні.</li>
-                        <li>Ми гарантуємо максимально можливий прибуток при роботі з нашими продуктами.</li>
+                        <li>Более 5000 клиентов и торговых точек сотрудничают с нами.</li>
+                        <li>Более 3 000 000 оригинальных напитков ежемесячно пьют наши счастливые потребители.</li>
+                        <li>В 24 регионах Украины заметно наше присутствие (благодаря вендинговой сети).</li>
+                        <li>16 лет присутствия на рынке дает возможность удовлетворить любые потребности наших партнеров
+                            по всей территории Украины.</li>
+                        <li>Специалисты компании регулярно посещают наших клиентов, предлагая полный спектр сервисного обслуживания
+                            обслуживание, от мелкого планового ремонта на месте, до капитального ремонта на
+                            территории нашей мастерской.</li>
+                        <li>Мы гарантируем максимально возможную прибыль при работе с нашими продуктами.</li>
                     </ul>
                 </div>
             </div>
@@ -251,20 +251,20 @@
                 <div class="image">
                     <a href="./dlya_magazinov_i_setey.html"><img src="../img/index/horeca.webp" class="card-img-top"
                             alt="horeca"></a>
-                    <div class="bottom-left">ДЛЯ МАГАЗИНІВ<br>ТА ТОРГІВЕЛЬНИХ МЕРЕЖ</div>
+                    <div class="bottom-left">ДЛЯ МАГАЗИНОВ<br>И ТОРГОВЫХ СЕТЕЙ</div>
                 </div>
             </div>
             <div class="col-lg-4 p-1">
                 <div class="image">
                     <a href="./dlya_cafe_restoranov.html"><img src="../img/index/classic.webp" class="card-img-top"
                             alt="classic"></a>
-                    <div class="bottom-left">ДЛЯ КАФЕ, РЕСТОРАНІВ,<br>ОФІСІВ</div>
+                    <div class="bottom-left">ДЛЯ КАФЕ, РЕСТОРАНОВ,<br>ОФИСОВ</div>
                 </div>
             </div>
             <div class="col-lg-4 p-1">
                 <div class="image">
                     <a href="./vending.html"><img src="../img/index/vending.webp" class="card-img-top" alt="vending"></a>
-                    <div class="bottom-left">ВЕНДІНГ</div>
+                    <div class="bottom-left">ВЕНДИНГ</div>
                 </div>
             </div>
         </div>
@@ -277,10 +277,10 @@
             </div>
             <div class="col">
                 <form class="needs-validation form-main" novalidate>
-                    <h4 class="green text-center">Безкоштовна консультація нашого спеціаліста</h4>
+                    <h4 class="green text-center">Бесплатная консультация нашего специалиста</h4>
                     <div class="mb-3">
                         <input type="text" name="userName" class="form-control main-text-size" id="validationName"
-                            placeholder="Ваше Ім'я" minlength="2" required>
+                            placeholder="Ваше Имя" minlength="2" required>
                     </div>
                     <div class="mb-3">
                         <input type="text" name="telephone" class="form-control main-text-size validationTelephone tel"
@@ -289,14 +289,14 @@
                     <div class="mb-3">
                         <select name="direction" class="form-select main-text-size validationDirection"
                             id="validationDirection" required>
-                            <option selected disabled value="">Мене цікавить...</option>
-                            <option>Кавомашина для кафе або торгової точки</option>
-                            <option>Торговий автомат з кавою або снеками</option>
+                            <option selected disabled value="">Меня интересует...</option>
+                            <option>Кофемашина для кафе или торговой точки</option>
+                            <option>Торговый автомат с кофе или снеками</option>
                         </select>
                     </div>
                     <div class="mb-3">
                         <input type="text" name="city" class="form-control main-text-size validationCity"
-                            id="validationCity" placeholder="Ваше місто..." required>
+                            id="validationCity" placeholder="Ваш город..." required>
                         <!-- <select name="city" class="form-select validationCity" id="validationCity" required>
                                 <option selected disabled value="">Ваше місто...</option>
                                 <option>Харків</option>
@@ -308,7 +308,7 @@
                                 <option>Інше місто</option>
                             </select> -->
                     </div>
-                    <button name="sendRequest" class="btn send-request main-text-size">Залишити заявку</button>
+                    <button name="sendRequest" class="btn send-request main-text-size">Оставить заявку</button>
                 </form>
             </div>
         </div>
@@ -322,7 +322,7 @@
                         <h3>INSTAGRAM</h3>
                         <img src="../img/index/instagram.webp" alt="logo_instagram">
                         <a target="_blank" href="https://instagram.com/bianchiprofessional?utm_medium=copy_link"
-                            class="btn btn-instagram">ПІДПИСАТИСЯ</a>
+                            class="btn btn-instagram">ПОДПИСАТЬСЯ</a>
                     </div>
                 </div>
                 <div class="col-lg-4 p-1">
@@ -330,14 +330,14 @@
                         <h3>FACEBOOK</h3>
                         <img src="../img/index/facebook.webp" alt="logo_facebook">
                         <a target="_blank" href="https://facebook.com/bianchiprofessional"
-                            class="btn btn-facebook">ПІДПИСАТИСЯ</a>
+                            class="btn btn-facebook">ПОДПИСАТЬСЯ</a>
                     </div>
                 </div>
                 <div class="col-lg-4 p-1">
                     <div class="socialnet-item">
                         <h3>TELEGRAM</h3>
                         <img src="../img/index/telegram.webp" alt="logo_telegram">
-                        <a target="_blank" href="https://t.me/bianchi_prof" class="btn btn-telegram">ПІДПИСАТИСЯ</a>
+                        <a target="_blank" href="https://t.me/bianchi_prof" class="btn btn-telegram">ПОДПИСАТЬСЯ</a>
                     </div>
                 </div>
             </div>
@@ -346,7 +346,7 @@
 
     <!-- /////////////////////////////////////////   Partners    ////////////////////////////////////////     -->
     <div class="separator">
-        <h3>НАШІ ПАРТНЕРИ</h3>
+        <h3>НАШЫ ПАРТНЁРЫ</h3>
     </div>
     <div class="container text-center partners mb-4">
         <div class="row g-0">
