--- a/src/vending_avtomaty.html
+++ b/src/vending_avtomaty.html
@@ -262,10 +262,12 @@
                     <div class="card-body">
                         <h3 class="text-center">Bianchi LEI 700</h3>
                         <small>
-                            <p class="lh-sm">Автоматична вендінг-машина на 30 напоїв. Панель выбору з великими,
+                            <p class="lh-sm">Автоматична вендінг-машина на 30 напоїв. </p>
+                            <p class="lh-sm">Панель выбору з великими,
                                 інтуїтивними кнопками з підсвічуванням,обладнана інноваційною технологією STT-Soft Touch
                                 Technology (технологія легкого натискання), яка розпізнає людський дотик. Ця технологія
-                                застосовується ексклюзивно в вендінг машинах Bianchi Industry. Можливість
+                                застосовується ексклюзивно в вендінг машинах Bianchi Industry. 
+                            <p class="lh-sm">Можливість
                                 індивідуального вибору дозування цукру.</p>
                         </small>
                     </div>
@@ -293,8 +295,9 @@
                     <div class="card-body">
                         <h3 class="text-center">Bianchi LEI 600 Smart</h3>
                         <small>
-                            <p class="lh-sm indent">Автоматична вендінг-машина для приготування гарячих напоїв місткістю
-                                600 чашок на 24 напої з сенсорною панеллю вибору напоїв. Обладнана системою
+                            <p class="lh-sm">Автоматична вендінг-машина для приготування гарячих напоїв місткістю
+                                600 чашок на 24 напої з сенсорною панеллю вибору напоїв. 
+                            <p class="lh-sm">Обладнана системою
                                 автоматичного регулювання помолу кави, що гарантує найвищу якість напоїв.</p>
                         </small>
                     </div>
@@ -322,8 +325,9 @@
                     <div class="card-body">
                         <h3 class="text-center">Bianchi LEI 600 Touch</h3>
                         <small>
-                            <p class="lh-sm indent">Вендінговий кавовий автомат місткістю 600 чашок на 30 напоїв з
-                                інтерактивною сенсорною панеллю вибору напоїв. У меню апарату входять кілька типів
+                            <p class="lh-sm">Вендінговий кавовий автомат місткістю 600 чашок на 30 напоїв з
+                                інтерактивною сенсорною панеллю вибору напоїв. 
+                            <p class="lh-sm">У меню апарату входять кілька типів
                                 кавових напоїв на основі зернової кави, шоколаду, розчинних кавових інгредієнтів а також
                                 чай.</p>
                         </small>
@@ -353,10 +357,12 @@
                     <div class="card-body">
                         <h3 class="text-center">Bianchi LEI 400</h3>
                         <small>
-                            <p class="lh-sm indent">Автоматична вендінг-машина на 11 напоїв. Призначена для установки в
+                            <p class="lh-sm">Автоматична вендінг-машина на 11 напоїв. </p>
+                            <p class="lh-sm">Призначена для установки в
                                 місцях з наявністю численних клієнтів, що вживають каву і напої на його основі: офісних
                                 центрах, будинках міської адміністрації, великих торгових залах, а також у адмінкорпусах
-                                великих виробничих об'єднань. Можливість індивідуального вибору дозування цукру.</p>
+                                великих виробничих об'єднань. </p>
+                                <p class="lh-sm">Можливість індивідуального вибору дозування цукру.</p>
                         </small>
                     </div>
                 </div>
@@ -385,9 +391,12 @@
                     <div class="card-body">
                         <h3 class="text-center">Bianchi LEI 400 Smart</h3>
                         <small>
-                            <p class="lh-sm indent">Кавовий апарат Bianchi LEI 400 SMART – модифікована версія автомата
-                                LEI 400. Версія SMART має сенсорний екран з таблицею на 24 секції і заднім
-                                підсвічуванням. Максимальне завантаження - 400 стаканів. Може приготувати 24 варіанти
+                            <p class="lh-sm">Кавовий апарат Bianchi LEI 400 SMART – модифікована версія автомата
+                                LEI 400. </p>
+                            <p class="lh-sm">Версія SMART має сенсорний екран з таблицею на 24 секції і заднім
+                                підсвічуванням. </p>
+                            <p class="lh-sm">Максимальне завантаження - 400 стаканів. </p>
+                            <p class="lh-sm">Може приготувати 24 варіанти
                                 гарячих напоїв з натуральної зернової кави і розчинних інгредієнтів.</p>
                         </small>
                     </div>
@@ -415,10 +424,12 @@
                     <div class="card-body">
                         <h3 class="text-center">Bianchi LEI 500 Touch</h3>
                         <small>
-                            <p class="lh-sm indent">Цей автомат призначений для приготування і продажу гарячих і
-                                холодних напоїв. Він має 24 кнопки прямого вибору напоїв в стандартній і тактильній STT
-                                панелі. Збільшений бункер для зернової кави і два контейнери для розчинної кави.
-                                Вендінговий кавовий автомат Bianchi Lei 500 призначений для роботи в місцях з середньою
+                            <p class="lh-sm">Цей автомат призначений для приготування і продажу гарячих і
+                                холодних напоїв. </p>
+                            <p class="lh-sm">Він має 24 кнопки прямого вибору напоїв в стандартній і тактильній STT
+                                панелі. </p>
+                            <p class="lh-sm">Збільшений бункер для зернової кави і два контейнери для розчинної кави. </p>
+                            <p class="lh-sm">Вендінговий кавовий автомат Bianchi Lei 500 призначений для роботи в місцях з середньою
                                 і великою прохідністю.</p>
                         </small>
                     </div>
@@ -445,10 +456,14 @@
                     <div class="card-body">
                         <h3 class="text-center">Wittenborg 7600</h3>
                         <small>
-                            <p class="lh-sm indent">Автоматичний торговий кавовий вендінг-автомат виготовлений в Данії
-                                концерном N&W (Necta&Wittenborg). Обладнаний сенсорним інтерактивним екраном. Дозволяє
-                                готувати до 12-ти видів напоїв. В апарат завантажуються два види стаканів для напоїв
-                                різного об'єму. Дизайн виділяє автомати Wittenborg 7600 в загальній масі автоматів, що
+                            <p class="lh-sm">Автоматичний торговий кавовий вендінг-автомат виготовлений в Данії
+                                концерном N&W (Necta&Wittenborg). </p>
+                            <p class="lh-sm">Обладнаний сенсорним інтерактивним екраном. </p>
+                            <p class="lh-sm">Дозволяє
+                                готувати до 12-ти видів напоїв. 
+                            <p class="lh-sm">В апарат завантажуються два види стаканів для напоїв
+                                різного об'єму. </p>
+                            <p class="lh-sm">Дизайн виділяє автомати Wittenborg 7600 в загальній масі автоматів, що
                                 додатково привертає увагу покупців.</p>
                         </small>
                     </div>
@@ -480,12 +495,19 @@
                     <div class="card-body">
                         <h3 class="text-center">Bianchi Vista M</h3>
                         <small>
-                            <p class="lh-sm indent">Вендінг машина з охолодженням до 3° для продажу снеків, сендвічів,
-                                свіжих продуктів, банок і пляшок. Доступна у версії slave ("підлеглий"). Модель Slave:
+                            <p class="lh-sm">Вендінг машина з охолодженням до 3° для продажу снеків, сендвічів,
+                                свіжих продуктів, банок і пляшок. </p>
+                            <p class="lh-sm">Доступна у версії slave ("підлеглий"). </p>
+                            <p class="lh-sm">Модель Slave:
                                 можливе комбінування двох машин VISTA M з вендінг машиною для гарячих напоїв, з однією
-                                системою оплати. Велике вікно вітрини з безпечним подвійним склом, що демонструє ваші
-                                товари в найбільш вигідному світлі. Дверний замок з програмним кодом. Регульована висота
-                                полиць. LED підсвічування. Вікно видачі товарів з системою проти крадіжок. </p>
+                                системою оплати. </p>
+                            <p class="lh-sm">Велике вікно вітрини з безпечним подвійним склом, що демонструє ваші
+                                товари в найбільш вигідному світлі. </p>
+                            <p class="lh-sm">Дверний замок з програмним кодом. </p>
+                            <p class="lh-sm">Регульована висота
+                                полиць. </p>
+                            <p class="lh-sm">LED підсвічування. </p>
+                            <p class="lh-sm">Вікно видачі товарів з системою проти крадіжок. </p>
                         </small>
                     </div>
                 </div>
